<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aubo_driver</name>
  <version>2.0.0</version>
  <description>
    Aubo robot ros2_control hardware interface using the old firmware SDK
    (Tcp2CanbusMode + robotServiceSetRobotPosData2Canbus).
    Compatible with aubo i5/i7/i10 robots running firmware that supports
    the legacy ServiceInterface (port 8899).
  </description>

  <author email="liug@our-robotics.com">Allen Liu</author>
  <maintainer email="liug@our-robotics.com">Allen Liu</maintainer>
  <url type="website">http://wiki.ros.org/aubo_driver</url>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
